# qrypto

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml  qrypto.py  requirements.txt  server.py
