[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qrypto"
version = "1.0.0"
description = "Scan, encrypt, and regenerate QR codes securely"
requires-python = ">=3.9"
dependencies = [
    "opencv-python",
    "cryptography",
    "qrcode[pil]",
    "keyring",
    "typer",
    "rich",
]

[project.scripts]
qrypto = "qrypto:app"

[tool.setuptools]
py-modules = ["qrypto"]
